--- a/package.json
+++ b/package.json
@@ -1,8 +1,34 @@
 {
+  "name": "smart-hostel-management",
+  "version": "2.0.0",
+  "description": "Enhanced Smart Hostel Management System with advanced features",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "init-data": "node -e \"require('./server.js').initSampleData()\""
+  },
   "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^8.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
-    "mongoose": "^8.18.2"
-  }
+    "dotenv": "^16.3.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "keywords": [
+    "hostel",
+    "management",
+    "student",
+    "attendance",
+    "room-allocation",
+    "analytics"
+  ],
+  "author": "Dr N.G.P IT",
+  "license": "MIT"
 }
