--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "smart-hostel-management",
   "version": "2.0.0",
   "description": "Enhanced Smart Hostel Management System with advanced features",
-  "main": "server.js",
+  "main": "api/index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "init-data": "node -e \"require('./server.js').initSampleData()\""
+    "start": "node api/index.js",
+    "dev": "nodemon api/index.js",
+    "init-data": "node -e \"require('./api/index.js').initSampleData()\""
   },
   "dependencies": {
     "express": "^4.18.2",
